# -

./: .gitignore  Market_Psychology_Strategy_(Squeeze_+_Capitulation)_OANDA_XAGUSD_2026-05-30_94cc7.csv  README.md  STRATEGY_GUIDE.md  sai_method_automation_spec_v0_2.md
backtest/: audit.py  deployment_check.py  final_combos.py  holding_period.py  improvements.py  new_techniques.py  oos_validation.py  optimize_trendbreak.py  portfolio_analysis.py  sai_backtest.py  timeframe_compare.py  timeframe_compare_adjusted.py  trendbreak_backtest.py
backtests/audit/: audit_cost_impact.csv  audit_data_quality.csv  audit_oos_split.csv  audit_streaks_dd.csv  run_audit.py
backtests/comparison/: comparison_by_symbol.csv  comparison_by_year.csv  comparison_main.csv  comparison_report.md  run_comparison.py
backtests/elliott_fibo/: practical_two_method_research.py  run_d1_bear_trap_h4_v_reclaim_study.py  run_d1_trap_delayed_h4_shelf_study.py  (+42 more)
docs/: BACKTEST_INDEX.md  FX検証研究ノート_2015-2024.docx  h4_t5_macd_bb_live_ready_notes.md  h4_t5_macd_bb_practical_audit_2026-05-24.md  two_method_practical_research_2026-05-24.md
forex_tester_sai_scanner/: CMakeLists.txt  README.md
forex_tester_sai_scanner/adapter/: ForexTesterStrategyAdapter.cpp
forex_tester_sai_scanner/src/: SaiScannerCore.cpp  SaiScannerCore.hpp
pine/: TrendBreakV1_Final.pine  h4_t5_macd_bb_visual.pine  sai_h1_visual_scanner.pine
scripts/: build_research_note_docx.py  build_wavebox_forward_tracker.mjs  export_fx_ai_sheet_csvs.py
slides/: README.md  oku-gachi-fx.html  oku-gachi-fx.md  package-lock.json  package.json
(+834 files in other folders)
